# django-ansible-inventory

./: README.md  pyproject.toml
django_ansible_inventory/: actions.py  admin.py  api_urls.py  apps.py  fields.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
django_ansible_inventory/example_scripts/: inventory.py  test_playbook.yaml
django_ansible_inventory/management/commands/: populate_ips.py
django_ansible_inventory/migrations/: 0001_initial.py  0002_alter_networklabel_options_and_more.py  0003_networkaddress_is_reserved_and_more.py
django_ansible_inventory/static/admin/css/: custom_select2.css
django_ansible_inventory/static/admin/js/: ip_filter.js  ip_reserve.js  toggle_ip.js
django_ansible_inventory/templates/admin/django_ansible_inventory/host/: change_list.html
